force-app/main/default/objects/Microcycle__c/Microcycle__c.object-meta.xml
<CustomObject>
    <description>Semaine de preparation (microcycle) ancree sur un match de reference (MD).</description>
    <label>Microcycle</label>
    <nameField>
        <label>Microcycle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Microcycles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>