force-app/main/default/objects/Microcycle__c/fields/AnchorMatch__c.field-meta.xml
<CustomField>
    <fullName>AnchorMatch__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Match de reference (matchday) pour indexer MD+1 / MD-3 / etc.</description>
    <label>Anchor Match</label>
    <referenceTo>Match__c</referenceTo>
    <relationshipLabel>Microcycles</relationshipLabel>
    <relationshipName>Microcycles</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>