force-app/main/default/objects/Microcycle__c/fields/Squad__c.field-meta.xml
<CustomField>
    <fullName>Squad__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Squad</label>
    <referenceTo>Squad__c</referenceTo>
    <relationshipLabel>Microcycles</relationshipLabel>
    <relationshipName>Microcycles</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>