force-app/main/default/objects/Microcycle__c/fields/WeekEndDate__c.field-meta.xml
<CustomField>
    <fullName>WeekEndDate__c</fullName>
    <label>Week End Date</label>
    <type>Date</type>
</CustomField>